test/functions/ferguson/set-const-ref-this.good
set-const-ref-this.chpl:4: In method 'f':
set-const-ref-this.chpl:6: error: cannot assign to const variable
  set-const-ref-this.chpl:13: called as (R(int(64))).f()
